WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
298709
Sticky element disappears past a certain scroll threshold and glitches if it contains an element with a backdrop filter
https://bugs.webkit.org/show_bug.cgi?id=298709
Summary
Sticky element disappears past a certain scroll threshold and glitches if it ...
Anthony Catel
Reported
2025-09-11 04:53:14 PDT
Created
attachment 476693
[details]
Minimal test case. I noticed a strange bug in the navigation menu while testing on Safari 16 (iOS simulator). When scrolling past the maximum bottom threshold: - The sticky element at the top disappears after a certain point. - If the sticky element contains a child with a backdrop filter, that child element disapears first (before the sticky element) and the backdrop effect itself remains visible. I've attached a minimal reproduction test case that highlights the issue in the iOS 26 simulator.
Attachments
Minimal test case.
(1.63 KB, text/html)
2025-09-11 04:53 PDT
,
Anthony Catel
no flags
Details
Video showing the bug
(11.91 MB, video/quicktime)
2025-09-11 04:58 PDT
,
Anthony Catel
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Anthony Catel
Comment 1
2025-09-11 04:58:33 PDT
Created
attachment 476694
[details]
Video showing the bug Here is a video showing the bug
Anthony Catel
Comment 2
2025-09-11 05:01:58 PDT
(In reply to Anthony Catel from
comment #0
)
> Created
attachment 476693
[details]
> Minimal test case. > > I noticed a strange bug in the navigation menu while testing on Safari 16 > (iOS simulator). > > When scrolling past the maximum bottom threshold: > > - The sticky element at the top disappears after a certain point. > - If the sticky element contains a child with a backdrop filter, that child > element disapears first (before the sticky element) and the backdrop effect > itself remains visible. > > I've attached a minimal reproduction test case that highlights the issue in > the iOS 26 simulator.
s/Safari 16/Safari 26
Simon Fraser (smfr)
Comment 3
2025-09-11 10:17:19 PDT
Thank you for the nice test case, I can reproduce.
Radar WebKit Bug Importer
Comment 4
2025-09-11 10:17:29 PDT
<
rdar://problem/160385933
>
Matt Woodrow
Comment 5
2025-09-25 00:44:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51305
EWS
Comment 6
2025-09-25 18:23:56 PDT
Committed
300544@main
(8a1585ea9d5f): <
https://commits.webkit.org/300544@main
> Reviewed commits have been landed. Closing PR #51305 and removing active labels.
EWS
Comment 7
2025-09-30 22:55:29 PDT
Committed
297297.494@safari-7622-branch
(595c5cbed739): <
https://commits.webkit.org/297297.494@safari-7622-branch
> Reviewed commits have been landed. Closing PR #3736 and removing active labels.
WebKit Commit Bot
Comment 8
2025-10-20 16:10:40 PDT
Re-opened since this is blocked by
bug 301145
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug