Sticky elements at the edge of the viewport can disappear when rubber band scrolling. https://bugs.webkit.org/show_bug.cgi?id=298709 <rdar://problem/160385933>

Reviewed by Simon Fraser.

During rubber-banding the WebContent side layers don't get scrolled (only the
UI-side does), but the visible content rect that we use to compute layer visible
rects does.  If a sticky layer ends up outside this rect (which doesn't account
for the 'stuck'-ness), then we detach the backing store.

Update the existing RenderLayerBacking::updateAllowsBackingStoreDetaching to
account for sticky, as well as the existing handling of fixed.

Test: fast/scrolling/ios/sticky-during-rubberband-offscreen.html
* LayoutTests/fast/scrolling/ios/sticky-during-rubberband-offscreen-expected.txt: Added.
* LayoutTests/fast/scrolling/ios/sticky-during-rubberband-offscreen.html: Added.
* Source/WebCore/rendering/RenderLayer.h:
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateAllowsBackingStoreDetaching):
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::allowBackingStoreDetachingForFixedPosition):
(WebCore::RenderLayerCompositor::computeCompositingRequirements):

Canonical link: https://commits.webkit.org/300544@main